# chomp

./: .dockerignore  .editorconfig  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile.core  Dockerfile.db  LICENCE  LICENSE  Makefile  README.md  directory.json  ingesters.yml  main.py  pyproject.toml  server-config.example.yml  uid  uid-masks
docs/: actions.md  api.md  architecture.md  configuration.md  deployment.md  monitoring.md  overview.md  services.md  testing.md
docs/adapters/: cache.md  storage.md
docs/ingesters/: overview.md
examples/: dex-trades.yml  dex-vs-cex.yml  diverse.yml  oracle-feeds.yml
scripts/: api-setup.bash  api_setup.sh  build_images.sh  check_name.py  clean.sh  core-setup.bash  core_setup.sh  database.sh  db-setup.bash  db_setup.sh  format.sh  format_code.sh  full_setup.sh  health_check.sh  install_deps.sh  lint.sh  logs.sh  monitor.sh  monitor_local.sh  restart.sh  run.sh  services.sh  setup.sh  show_logs.sh  start_cluster.sh  start_ingester.sh  start_server.sh  status.py  stop.sh  stop_all.sh  stop_cluster.sh  test.sh  utils.bash  utils.sh
src/: cache.py  config-schema.yml  constants.py  deps.py  ingester-config-schema.yml  model.py  proxies.py  server-config-schema.yml  state.py
src/actions/: __init__.py  load.py  schedule.py  store.py  transform.py
src/adapters/: __init__.py  clickhouse.py  duckdb.py  evm_rpc.py  influxdb.py  jsonrpc.py  kx.py  mongodb.py  opentsdb.py  prometheus.py  questdb.py  solana_rpc.py  sql.py  sqlite.py  sui_rpc.py  svm_rpc.py  tdengine.py  timescale.py  victoriametrics.py
src/analytics/: __init__.py  momentum.py  trend.py  volatility.py
src/ingesters/: __init__.py  dynamic_scrapper.py  evm_caller.py  evm_logger.py  http_api.py  monitor.py  processor.py  resp3_getter.py  resp3_subscriber.py  solana_caller.py  static_scrapper.py  sui_caller.py  svm_caller.py  ws_api.py
src/models/: __init__.py  base.py  configs.py  ingesters.py  monitors.py  user.py
src/server/: __init__.py  __main__.py  responses.py  routes.py
src/server/middlewares/: __init__.py  auth.py  limiter.py  version_resolver.py
src/server/routers/: __init__.py  admin.py  auth.py  config.py  forwarder.py  retriever.py
src/server/templates/: docs.html  index.html
src/services/: __init__.py  admin.py  admin_service.py  auth.py  config.py  converter.py  gatekeeeper.py  limiter.py  loader.py  price_analysis.py  status_checker.py  ts_analysis.py
src/utils/: __init__.py  argparser.py  date.py  decorators.py  deps.py  estimators.py  format.py  http.py  imports.py  maths.py  reflexion.py  runtime.py  safe_eval.py  types.py  uid.py
tests/: test_actions.py  test_actions_transform.py  test_adapters.py  test_adapters_clickhouse.py  test_adapters_duckdb.py  test_adapters_evm_rpc.py  test_adapters_influxdb.py  test_adapters_mongodb.py  test_adapters_sqlite.py  test_adapters_tdengine.py  test_adapters_victoriametrics.py  test_analytics.py  test_api_comprehensive.py  test_api_flows.py  test_auth_flow.py  test_authentication_flows.py  test_basic.py  test_cache.py  test_compiled_transformers.py  test_deps.py  test_dict_mixin.py  test_ingesters.py  test_ingesters_dynamic_scrapper.py  test_ingesters_evm_caller.py  test_ingesters_evm_logger.py  test_ingesters_http_api.py  test_ingesters_processor.py  test_ingesters_sui_caller.py  test_ingesters_svm_logger.py  test_ingesters_ws_api.py  test_integration_flows.py  test_loaders.py  test_main.py  test_model.py  test_processors.py  test_protection.py  test_proxies.py  test_proxies_redis.py  test_server_config.py  test_server_middlewares_init.py  (+22 more)
