[project]
name = "chomp"
version = "1.1.0"
description = "Lightweight, multimodal ingester"
authors = [
    {name = "JakeTheSlug", email = "jake@btr.supply"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"

# Core dependencies - always required
dependencies = [
    "redis==6.2.0",
    "python-dotenv==1.1.1",
    "pyyaml>=6.0.2",
    "yamale==6.0.0",
    "aiocron==1.8", # v2 uses cronsim as replacement for croniter, breaks sec compatibility
    "fastapi>=0.115.5",
    "uvicorn[standard]>=0.32.1",
    "python-multipart>=0.0.6",
    "orjson>=3.10.3",
    "python-dateutil>=2.9.0",
    "httpx>=0.28.1",
    "tomli>=2.2.1",
    "polars>=1.21.0",
    "pyarrow>=19.0.0",
    "numpy>=1.26.4",
    "types-python-dateutil>=2.9.0.20250516",
    "diff-match-patch>=20230430",
    "psutil>=5.9.0",
    "pyjwt>=2.8.0",
    "blake3>=0.4.1",
    "types-pyyaml>=6.0.12.20250516",
    "websockets>=15.0.1",
    "asyncpg>=0.29.0",
    "taospy>=2.8.1",
    "pytest>=8.4.1",
]

# Optional dependencies for specific adapters and ingesters
#
# USAGE PATTERNS:
# - Individual components: uv add chomp[evm,web2] or pip install chomp[evm,web2]
# - Common combinations: uv add chomp[default,all-adapters] or pip install chomp[default,all-adapters]
# - Everything: uv add chomp[all] or pip install chomp[all]
#
# GROUPS:
# - Database adapters: Individual database support (tdengine, clickhouse, etc.)
# - Ingesters: Web2 (scraper/web2), Web3 (evm, svm, sui, aptos, ton)
# - Combinations: default (most common), all-adapters, all-ingesters, all
[project.optional-dependencies]

# Database adapters
tdengine = ["taospy==2.8.1"]
timescale = ["asyncpg>=0.29.0"]
clickhouse = ["asynch>=0.2.0"]
duckdb = ["duckdb>=0.9.0"]
mongodb = ["motor>=3.3.0"]
influxdb = ["influxdb-client>=1.38.0"]
kx = ["pykx>=2.4.0"]
sqlite = ["aiosqlite>=0.19.0"]
questdb = []  # Uses httpx which is already in core
victoriametrics = []  # Uses httpx which is already in core

# Web2 ingesters
web2 = [
    "beautifulsoup4>=4.12.3",
    "lxml>=5.3.0",
    "playwright>=1.49.0"
]
scraper = [
    "beautifulsoup4>=4.12.3",
    "lxml>=5.3.0",
    "playwright>=1.49.0"
]

# Web3 ingesters
evm = [
    "web3==7.12.0",
    "eth-utils>=5.3.0",
    "eth-account>=0.13.7",
    "hexbytes>=1.3.1"
]
svm = ["solana>=0.36.2", "solders>=0.23.0"]
sui = []  # Uses httpx which is already in core
aptos = []  # Uses httpx which is already in core
ton = []  # Uses httpx which is already in core

# Common combinations
default = [
    "taospy==2.8.1",          # Default adapter - TDengine
    "beautifulsoup4>=4.12.3",  # Web2 scraping
    "lxml>=5.3.0",
    "web3==7.12.0",            # EVM support
    "eth-utils>=5.3.0",
    "eth-account>=0.13.7",
    "hexbytes>=1.3.1",
    "solana>=0.36.2",          # SVM support
    "solders>=0.23.0"
]

# All database adapters
all-adapters = [
    "taospy==2.8.1",         # tdengine
    "asyncpg>=0.29.0",        # timescale
    "asynch>=0.2.0",          # clickhouse
    "duckdb>=0.9.0",          # duckdb
    "motor>=3.3.0",           # mongodb
    "influxdb-client>=1.38.0", # influxdb
    "pykx>=2.4.0",            # kx
    "aiosqlite>=0.19.0"       # sqlite
]

# All ingesters (web2 + web3)
all-ingesters = [
    "beautifulsoup4>=4.12.3", # web2
    "lxml>=5.3.0",
    "playwright>=1.49.0",
    "web3==7.12.0",           # evm
    "eth-utils>=5.3.0",
    "eth-account>=0.13.7",
    "hexbytes>=1.3.1",
    "solana>=0.36.2",         # svm
    "solders>=0.23.0"
]

# Everything
all = [
    "taospy==2.8.1",         # all adapters
    "asyncpg>=0.29.0",
    "asynch>=0.2.0",
    "duckdb>=0.9.0",
    "motor>=3.3.0",
    "influxdb-client>=1.38.0",
    "pykx>=2.4.0",
    "aiosqlite>=0.19.0",
    "beautifulsoup4>=4.12.3", # all ingesters
    "lxml>=5.3.0",
    "playwright>=1.49.0",
    "web3==7.12.0",
    "eth-utils>=5.3.0",
    "eth-account>=0.13.7",
    "hexbytes>=1.3.1",
    "solana>=0.36.2",
    "solders>=0.23.0"
]

[dependency-groups]
dev = [
    "ruff>=0.11.12",
    "yapf>=0.40.2",
    "mypy>=1.16.0",
    "pytest>=8.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.25.0",
    "pre-commit>=4.0.0",
    "coverage>=7.8.2",
    "coverage-badge>=1.1.0",
]

[tool.mypy]
python_version = "3.12"
mypy_path = "."
packages = ["src"]
explicit_package_bases = true
namespace_packages = true
ignore_missing_imports = true
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
no_implicit_optional = true
